# RAML

./: .gitignore  Dockerfile  pyproject.toml
scripts/: install_apktool.sh  start.sh
src/: celery.py  database.py  main.py  schemas.py
src/routes/: analysis_routes.py  user_routes.py
src/services/: raml_service.py  user_service.py
src/services/raml/: config.py  evaluate_predictions.py  llm.py  logger.py  main.py  report_generator.py  retrieval_engine.py  smali_loader.py  smali_parser.py
